--- a/index.html
+++ b/index.html
@@ -5,12 +5,52 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Email Verification Success</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f4f4f4;
+            text-align: center;
+        }
+
+        .container {
+            max-width: 600px;
+            margin: 100px auto;
+            padding: 20px;
+            background-color: #fff;
+            border-radius: 8px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        }
+
+        h1 {
+            color: #333;
+        }
+
+        p {
+            color: #666;
+        }
+
+        .button {
+            display: inline-block;
+            padding: 10px 20px;
+            background-color: #007bff;
+            color: #fff;
+            text-decoration: none;
+            border-radius: 5px;
+            transition: background-color 0.3s;
+        }
+
+        .button:hover {
+            background-color: #0056b3;
+        }
+    </style>
 </head>
 
 <body>
-    <h1>Email Verification Success!</h1>
-    <p>Your email has been successfully verified.</p>
-    <a href="taskbuddy://verification">Continue to TaskBuddy</a>
+    <div class="container">
+        <h1>Email Verification Success!</h1>
+        <p>Your email has been successfully verified.</p>
+        <a class="button" href="taskbuddy://verification">Continue to TaskBuddy</a>
+    </div>
 </body>
 
 </html>
